--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,10 @@ image: gcc:6.1
 
 pipelines:
   default:
+    - step: # CMake Setup
+        script:
+          - apt-get update
+          - apt-get install -y cmake
     - step:
         script: # Modify the commands below to build your repository.
           - make
