Added aeon_pocket to CMAKELists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB_RECURSE WALLET wallet/*)
 file(GLOB_RECURSE MINER miner/*)
 file(GLOB_RECURSE RINGCT ringct/*)
 file(GLOB_RECURSE WEB_WALLET web_wallet/*)
+file(GLOB_RECURSE AEON_POCKET aeon_pocket/*)
 
 source_group(common FILES ${COMMON})
 source_group(crypto FILES ${CRYPTO})
@@ -27,6 +28,7 @@ source_group(connectivity-tool FILES ${CONN_TOOL})
 source_group(wallet FILES ${WALLET})
 source_group(simpleminer FILES ${MINER})
 source_group(web_wallet FILES ${WEB_WALLET})
+source_group(aeon_pocket FILES ${AEON_POCKET})
 
 add_library(ringct ${RINGCT})
 add_library(common ${COMMON})
@@ -47,6 +49,8 @@ add_dependencies(rpc version)
 add_dependencies(simplewallet version)
 add_executable(web_wallet ${WEB_WALLET})
 target_link_libraries(web_wallet wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
+add_executable(aeon_pocket ${AEON_POCKET})
+target_link_libraries(aeon_pocket wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 
 set_property(TARGET common crypto cryptonote_core rpc wallet PROPERTY FOLDER "libs")
 set_property(TARGET daemon simplewallet connectivity_tool simpleminer PROPERTY FOLDER "prog")
