--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,6 @@ file(GLOB_RECURSE CONN_TOOL connectivity_tool/*)
 file(GLOB_RECURSE WALLET wallet/*)
 file(GLOB_RECURSE MINER miner/*)
 file(GLOB_RECURSE RINGCT ringct/*)
-file(GLOB_RECURSE WEB_WALLET web_wallet/*)
 file(GLOB_RECURSE AEON_POCKET aeon_pocket/*)
 
 source_group(common FILES ${COMMON})
@@ -27,31 +26,17 @@ source_group(simplewallet FILES ${SIMPLEWALLET})
 source_group(connectivity-tool FILES ${CONN_TOOL})
 source_group(wallet FILES ${WALLET})
 source_group(simpleminer FILES ${MINER})
-source_group(web_wallet FILES ${WEB_WALLET})
 source_group(aeon_pocket FILES ${AEON_POCKET})
 
 add_library(ringct ${RINGCT})
 add_library(common ${COMMON})
 add_library(crypto ${CRYPTO})
 add_library(cryptonote_core ${CRYPTONOTE_CORE})
-add_executable(daemon ${DAEMON} ${P2P} ${CRYPTONOTE_PROTOCOL})
-add_executable(connectivity_tool ${CONN_TOOL})
-add_executable(simpleminer ${MINER})
-target_link_libraries(daemon rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
-target_link_libraries(connectivity_tool cryptonote_core crypto common ringct ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
-target_link_libraries(simpleminer cryptonote_core crypto common ringct ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 add_library(rpc ${RPC})
 add_library(wallet ${WALLET})
-add_executable(simplewallet ${SIMPLEWALLET} )
-target_link_libraries(simplewallet wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
-add_dependencies(daemon version)
-add_dependencies(rpc version)
-add_dependencies(simplewallet version)
-add_executable(web_wallet ${WEB_WALLET})
-target_link_libraries(web_wallet wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 add_executable(aeon_pocket ${AEON_POCKET})
 target_link_libraries(aeon_pocket wallet rpc cryptonote_core crypto common ringct libminiupnpc-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 
-set_property(TARGET common crypto cryptonote_core rpc wallet PROPERTY FOLDER "libs")
-set_property(TARGET daemon simplewallet connectivity_tool simpleminer PROPERTY FOLDER "prog")
-set_property(TARGET daemon PROPERTY OUTPUT_NAME "aeond")
+#set_property(TARGET common crypto cryptonote_core rpc wallet PROPERTY FOLDER "libs")
+#set_property(TARGET daemon simplewallet connectivity_tool simpleminer PROPERTY FOLDER "prog")
+#set_property(TARGET daemon PROPERTY OUTPUT_NAME "aeond")
