--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,6 +136,8 @@ if(NOT IOS)
   add_subdirectory(blockchain_utilities)
 endif()
 
+add_subdirectory(aeon_pocket)
+
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
   add_subdirectory(debug_utilities)
 endif()
